# ten-lists

./: .bandit  .codeclimate.yml  .coveragerc  .deepsource.toml  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  Bible_Playlist_Generator.code-workspace  CHANGELOG.md  Dockerfile  Gruntfile.js  Procfile  README.md  bible_playlist_generator.py  conftest.py  docker-compose.yml  hp_plotter_requirements.md  justfile  list3.txt  list4.txt  list5.txt  list7.txt  make_mp3.py  make_one_week_playlist.sh  manage.py  old_lists.tar.xz  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  scripture_playlist_gen.py  setup.cfg  tailwind.config.js  tasks.py  temp.md  test_script.py  (+2 more)
.circleci/: config.yaml  config.yml
.github/: dependabot.yml  renovate.json
.github/workflows/: greetings.yml  main.yml  release.yml
data/: list_01.txt  list_02.txt  list_03.txt  list_04.txt  list_05.txt  list_06.txt  list_07.txt  list_08.txt  list_09.txt  list_10.txt
docker/: Procfile
docker/flask/: Dockerfile  entrypoint.sh
docker/node/: Dockerfile
env/: env.example
helpers/: create_db.py  ten_lists.json
helpers/data/: list_01.txt  list_06.txt  list_08.txt  list_10.txt
scripts/: .gitignore  cloudinary_cleanup.py  make_one_week_playlist.sh  post-build.js  replicate_id3_tags.sh  validate-config.js
src/: index.html
src/css/: main.css
src/js/: app.js  audioLoader.js  config.js  main.js  themeManager.js
tenlists/: __init__.py
tenlists/cli/: __init__.py  __main__.py
tenlists/data/: ten_lists.json
tenlists/utils/: create_db.py  create_json.py  create_json_with_metadata.py  ten_lists.db  ten_lists.json
tenlists/utils/data/: list_09.txt
tenlists/webapp/: README.md  manage.py  set_env.sh
tenlists/webapp/conf/db/: .gitignore
tenlists/webapp/conf/uwsgi/: .gitignore
tenlists/webapp/ten_lists/: __init__.py  config.py
tenlists/webapp/ten_lists/errors/: handlers.py
tenlists/webapp/ten_lists/main/: ffprobe.py  routes.py
tenlists/webapp/ten_lists/static/js/: custom.js
tenlists/webapp/ten_lists/static/vendors/bootstrap/css/: bootstrap-grid.min.css  bootstrap-reboot.min.css
tenlists/webapp/ten_lists/templates/: home.html  layout.html
tenlists/webapp/ten_lists/templates/errors/: 400.html  401.html  404.html  501.html
tests/: README.md  conftest.py  setup.js  test_cli.py  test_webapp.py
tests/integration/: appAudio.test.js  hornerSystem.test.js
tests/mocks/: browserMocks.js
tests/unit/: audioLoader.test.js  config.test.js  main.test.js  themeManager.test.js
webapp/: set_env.sh
webapp/conf/env/: env.example
webapp/ten_lists/: __init__.py
webapp/ten_lists/main/: routes.py
webapp/ten_lists/static/css/: custom.css  custom.min.css
webapp/ten_lists/static/js/: custom.js  custom.min.js
webapp/ten_lists/static/vendors/bootstrap/css/: bootstrap-reboot.css
webapp/ten_lists/templates/: home.html
webapp/ten_lists/templates/errors/: 403.html  500.html  502.html  503.html  504.html
webapp/ten_lists/templates/includes/: _footer.html
