[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | (.*)/migrations
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
skip = ["node_modules", ".git", "__pycache__", "LC_MESSAGES", "venv", ".venv"]
blocked_extensions = ["rst", "html", "js", "svg", "txt", "css", "scss", "png", "snap", "ts", "tsx"]
known_first_party = "tenlists"
known_flask = ["flask", "flask_debugtoolbar", "flask_mail", "flask_moment", "flask_restful", "flask_script"]
sections = ["FUTURE", "STDLIB", "FLASK", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.commitizen]
version = "1.0.1"
version_files = [
    # "package.json",
    "tenlists/__init__.py",
    "tenlists/cli/__init__.py",
    "tenlists/utils/__init__.py",
    "tenlists/webapp/__init__.py",
]
tag_format = "v$major.$minor.$patch"
annotated_tag = true
update_changelog_on_bump = false
# changelog_file = "CHANGELOG.md"
# changelog_incremental = true
