[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | (.*)/migrations
    | dist
  )/
)
'''

[tool.ruff]
exclude = [".git", "__pycache__", ".pytest_cache", "node_modules", "LC_MESSAGES", "public", "venv", ".venv"]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = ["E203", "E266", "E501"]
select = ["B", "C", "E", "F", "W", "B9"]

[tool.ruff.lint.isort]
known-first-party = ["tenlists"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.run]
branch = true
omit = [
    "venv/*",
    "tenlists/utils/*",
    "manage.py",
    "tasks.py"
]

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=html --cov-report=xml --cov-report=term-missing:skip-covered -s -vv"
testpaths = ["tests"]
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py"
]

[tool.commitizen]
version = "1.0.1"
version_files = [
    # "package.json",
    "tenlists/__init__.py",
    "tenlists/cli/__init__.py",
    "tenlists/utils/__init__.py",
    "tenlists/webapp/__init__.py",
]
tag_format = "v$major.$minor.$patch"
annotated_tag = true
update_changelog_on_bump = false
# changelog_file = "CHANGELOG.md"
# changelog_incremental = true
